--- a/src/css/ChatInput.css
+++ b/src/css/ChatInput.css
@@ -1,12 +1,4 @@
-.attachment-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-right: 16px;
-}
-
-.input-dropzone {
-}
+/* MessageForm component styles */
 
 .chat-input {
   position: absolute;
@@ -17,25 +9,23 @@
 
 .chat-input-shadow {
   box-shadow: 0px -3px 48px -1px rgba(0,0,0,0.10);
-	background: #fff;
+  background: #fff;
 }
 
-.chat-input textarea {
+.chat-input .InputField {
   width: calc(100% - 52px);
   height: auto;
   border: 0px;
   padding: 20px 0px 20px 30px;
   resize: none;
   font-size: 15px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	line-height: 1.33;
-	color: #565867;
+  font-family: var(--font-family, "Helvetica Neue", Helvetica, Arial, sans-serif);
+  font-weight: 400;
+  line-height: 1.33;
+  color: #565867;
 }
 
-.chat-input .Dropzone {
-  width: 40px;
-  height: 40px;
-  margin: 6px;
+.light-background {
+  background-color: rgba(240,243,245,1);
 }
 
